tests/paczka1/small_fuzzy/24738155.err
Error in line 1: HSquy88KTK A242 22,2
Error in line 4: FPEud A662 80,7
Error in line 2: mD4nbiIe A242 33,3
Error in line 11: A8 A355 68,2
Error in line 12: A8 A355 239,4
